--- a/CloudDisk/index.html
+++ b/CloudDisk/index.html
@@ -62,6 +62,18 @@
            <i class="icon"></i>
            <span class="text">刷新</span>
         </a>
+	 <a href="https://bo-zhong.github.io/my/parallax" target="_blank">
+           <i class="icon"></i>
+           <span class="text">作品1</span>
+        </a>
+	 <a href="https://bo-zhong.github.io/my/mall" target="_blank">
+           <i class="icon"></i>
+           <span class="text">作品2</span>
+        </a>
+	 <a href="https://bo-zhong.github.io/my2/移动端" target="_blank">
+           <i class="icon"></i>
+           <span class="text">作品3</span>
+        </a>   
         <div class="view ">
              <a id="changeView" class="changeView" data-view='view' href="#" title="切换视图">
                 <i class="icon"></i>
