--- a/CloudDisk/index.html
+++ b/CloudDisk/index.html
@@ -8,15 +8,15 @@
 
 <body> 
   <div class="rightB">
-      <a href="https://bo-zhong.github.io/my/parallax" target="_blank">
+      <a href="https://bo-zhong.github.io/my2/移动端" target="_blank">
            <i class="icon"></i>
            <span class="text">作品1</span>
         </a>
-	 <a href="https://bo-zhong.github.io/my/mall" target="_blank">
+	 <a href="https://bo-zhong.github.io/filter/mall%E5%90%96/index.html" target="_blank">
            <i class="icon"></i>
            <span class="text">作品2</span>
         </a>
-	 <a href="https://bo-zhong.github.io/my2/移动端" target="_blank">
+	 <a href="https://bo-zhong.github.io/filter/parallax/index.html" target="_blank">
            <i class="icon"></i>
            <span class="text">作品3</span>
      </a> 
